# inference_engine_rust

./: .gitignore  Cargo.toml  GEMMA4_DEBUG_INVESTIGATION.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
model/: README.md
src/: bench_metrics.rs  chat_prompt.rs  error.rs  generation.rs  lib.rs  loaded_model.rs  main.rs  model_config.rs  model_weights.rs  prefill.rs  runtime.rs  sampling.rs  session.rs
src/core/: tensor.rs  types.rs
src/engine/: embed.rs  generation.rs  mod.rs  runtime.rs  session.rs  state.rs
src/gguf_loader/: loader.rs
src/layers/: attention.rs  block.rs  embeddings.rs  ffn.rs  gemma4_ple.rs  mod.rs  prefill_block.rs
src/math/: softmax.rs
src/model_loader/: convert.rs  file_loader.rs  gguf_types.rs  io.rs  mod.rs  parser.rs  quantization_format.md  reader.rs  tensor.rs  tensor_loader.rs  tokenizer.rs
src/model_loader/file_loader/: convert.rs  file_loader.rs  io.rs  mod.rs  parser.rs  tensor_loader.rs  types.rs
src/model_weights/: mod.rs  names.rs  view.rs
src/ops/: cpu_features.rs  embeddings.rs  gelu.rs  matmul.rs  mod.rs  residual_add.rs  rmsnorm.rs  rope.rs  softmax.rs  swiglu.rs
src/parsing/: mod.rs  parsing.rs  structure.rs
src/tokenizer/: mod.rs  sentencepiece.rs
tests/: gemma_decode_self_consistency.rs  gemma_generation_regression.rs  gemma_hidden_vs_llama.rs  gemma_logits_vs_llama.rs  gemma_q8_smoke.rs  gemma_tensor_node_vs_llama.rs  generate_smoke.rs  mistral_logits_vs_llama.rs  prefill_smoke.rs  reference_model.rs
tests/common/: llama_logits_helpers.rs  llama_tensor_dump_helpers.rs  mod.rs
(+6 files in other folders)
