[package]
name = "inference_engine_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
gguf-rs = "0.1.4"
log = "0.4.28"
sentencepiece = "0.11.3"
thiserror = "2.0.18"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = true
